--- a/app/src/main/res/layout/content_critic_suggestion.xml
+++ b/app/src/main/res/layout/content_critic_suggestion.xml
@@ -13,7 +13,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:layout_marginBottom="55dp"
         >
 
         <LinearLayout
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:orientation="vertical"
+            android:background="@color/colorWhite"
             android:padding="@dimen/xmin_padding">
 
             <LinearLayout
