--- a/app/src/main/res/layout/content_form_voucher.xml
+++ b/app/src/main/res/layout/content_form_voucher.xml
@@ -103,7 +103,7 @@
                             android:ems="10"
                             android:hint="Kode Kupon"
                             android:imeOptions="actionNext"
-                            android:inputType="textCapWords"
+                            android:inputType="textCapCharacters"
                             android:maxLength="10"
                             android:padding="@dimen/min_padding"
                             android:text="" />
