--- a/app/src/main/res/layout/content_delivery_pricing.xml
+++ b/app/src/main/res/layout/content_delivery_pricing.xml
@@ -16,8 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/explorer_item_size"
         android:orientation="vertical"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
@@ -25,8 +24,7 @@
             android:textAlignment="center"
             android:textColor="@color/colorBlack54"
             android:textStyle="bold"
-            android:text="maaf, anda tidak memiliki daftar biaya pengiriman"
-            />
+            android:text="anda tidak memiliki daftar biaya pengiriman" />
 
         <TextView
             android:id="@+id/toFormAdd"
@@ -38,9 +36,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/xmin_padding"
             android:text="Buat Biaya Pengiriman"
-            android:clickable="true"
-
-            />
+            android:clickable="true" />
 
     </LinearLayout>
 
