--- a/app/src/main/res/layout/content_detail_aset.xml
+++ b/app/src/main/res/layout/content_detail_aset.xml
@@ -58,8 +58,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginStart="@dimen/xmin_padding"
-                        android:layout_toStartOf="@+id/sw_status"
+                        android:layout_alignParentEnd="true"
                         android:gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/min_padding"
                         android:text="@string/status_aktif"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -68,10 +69,9 @@
                         android:id="@+id/sw_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
+                        android:layout_toStartOf="@+id/as_status_det"
                         android:layout_centerVertical="true"
                         android:layout_marginEnd="@dimen/min_padding"
-                        android:layout_marginStart="@dimen/min_padding"
                         android:gravity="center_vertical|end"
                         android:theme="@style/SwitchCompatTheme"
                         />
@@ -198,6 +198,7 @@
                     </RelativeLayout>
 
                     <TextView
+                        android:id="@+id/textharga"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/min_padding"
@@ -210,7 +211,9 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/as_price_recyclerView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+                        android:layout_height="match_parent">
+
+                    </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
 
