--- a/app/src/main/res/layout/content_form_delivery_price.xml
+++ b/app/src/main/res/layout/content_form_delivery_price.xml
@@ -201,7 +201,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <com.aldoapps.autoformatedittext.AutoFormatEditText
+                        <EditText
                             android:id="@+id/price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -211,7 +211,8 @@
                             android:maxLength="13"
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionDone"
-                            app:isDecimal="false" />
+                            android:inputType="number"
+                             />
 
                         <TextView
                             android:id="@+id/idra"
