--- a/app/src/main/res/layout/content_form_feature.xml
+++ b/app/src/main/res/layout/content_form_feature.xml
@@ -72,6 +72,49 @@
                 android:padding="@dimen/xmin_padding">
 
                 <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kategori Asset"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="12sp" />
+
+                <EditText
+                    android:id="@+id/fr_asset_cat_val"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Name"
+                    android:visibility="gone" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/xmin_padding"
+                    android:background="@color/colorNearWhite">
+
+                    <Spinner
+                        android:id="@+id/fr_asset_cat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/asset_category_entries"
+                        android:fadingEdge="horizontal"
+                        android:padding="@dimen/xmin_padding"
+                        android:spinnerMode="dialog"
+                        app:layout_gravity="bottom" />
+
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
                     android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -114,6 +157,20 @@
                     android:inputType="number"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/btn_lmedium_height"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="@dimen/xmin_padding"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorPrimaryDark"
+                android:textAlignment="center"
+                android:text="@string/btn_save"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/medium_text" />
 
         </LinearLayout>
 
