--- a/app/src/main/res/layout/feature_item_view.xml
+++ b/app/src/main/res/layout/feature_item_view.xml
@@ -103,7 +103,7 @@
                     android:layout_marginLeft="@dimen/xmin_padding"
                     android:background="@color/colorNearWhite"
                     android:padding="@dimen/small_space"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     app:srcCompat="@drawable/ic_delete_black_24dp" />
 
             </LinearLayout>
